2007-01-07 23:28  james

	* Remove an unused variable that caused a failure with -Werror.

2007-01-07 22:45  james

	* Fix an autoconf problem that needed sys/socket.h including before
	  linux/wireless.h in its test program.

2007-01-07 16:49  james

	* Add an option to make the panel icon square.

2006-12-21 22:23  james

	* Add a THANKS file for people who contribute to the plugin.

2006-12-21 21:34  james

	* Add patch from Petr Salinger <Petr.Salinger@seznam.cz> to fix
	  compilation on kfreebsd.

2006-09-11 08:11  nick

	* Fix typo in panel-plugin/Makefile.am
	* BUmp version to 0.5.3 for release

2006-08-10 19:03  james

	* Make the plugin visible when added.
	* Add an option to hide when no device present.

2006-08-10 01:59  james

	* Fixed the regression that made the icon square.
	* Improve the build system slightly.

2006-08-09 23:23  james

	* Added Italian translation. (Thanks ema).

2006-08-09 17:51  james

	* Fixed a bug that meant it didn't work on most linux systems

2006-05-03 23:23  james

	* Updated to work with new API

2004-08-03 18:46  benny

	* panel-plugin/wavelan.c: Fix for Linux ifconfig.

2004-08-03 15:21  benny

	* NEWS, configure, configure.ac, panel-plugin/wavelan.c: Version
	0.4.0 with support for threaded xfce4-panel.  Added combo for
	interface selection.

2004-07-29 22:42  benny

	* panel-plugin/wavelan.c: Fix hanging panel with threading.

2004-07-28 23:49  benny

	* m4/depends.m4: Fix BM_DEPEND_CHECK().

2004-07-24 19:43  benny

	* Makefile.in, aclocal.m4, config.guess, config.sub, configure,
	install-sh, ltmain.sh, mkinstalldirs, panel-plugin/Makefile.in,
	panel-plugin/wavelan.c: Prepare this for threaded panel.

2004-07-24 19:30  benny

	* m4/depends.m4: Correct min. required panel version.

2004-07-24 19:27  benny

	* m4/depends.m4: Extended XFCE_PANEL_PLUGIN macro to honor the new
	threaded panel.

2004-07-21 11:00  benny

	* m4/depends.m4: New panel plugin check

2004-02-12 23:45  benny

	* ChangeLog: Updated ChangeLog.
